# spring_challange

./: .gitignore  01-spring-challange.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
assets/: shock_absorber_89953_cylinder_4255.ply  shock_absorber_89953_piston_4254.ply
