[tool.poetry]
name = "task"
version = "0.1.0"
description = "Dinos Lego Spring Challange"
authors = ["Dino Scheidt <github@din.ooo>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Common Jupyter Notebook Dependencies
[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
tqdm = "^4.66.2"
# Charting
matplotlib = "^3.8.4"
plotly = "^5.20.0"
# Data Science
pandas = "^2.2.2"
numpy = "^1.26.4"

# Common Machine Learning Dependencies
[tool.poetry.group.ml.dependencies]
torch = "^2.2.2"
torchvision = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
